[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scripts/GUI/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://textures/UI/grey3.png" type="Texture" id=2]
[ext_resource path="res://fonts/Exo2-Black.otf" type="DynamicFontData" id=3]
[ext_resource path="res://textures/UI/grey4.png" type="Texture" id=4]
[ext_resource path="res://fonts/Exo2-SemiBold.otf" type="DynamicFontData" id=5]
[ext_resource path="res://textures/Tiles/grass.png" type="Texture" id=6]
[ext_resource path="res://textures/Characters/Main Character/front_walking1.png" type="Texture" id=7]
[ext_resource path="res://textures/Characters/Main Character/front_walking2.png" type="Texture" id=8]
[ext_resource path="res://textures/Characters/Main Character/front_walking3.png" type="Texture" id=9]
[ext_resource path="res://textures/Characters/Main Character/front_walking4.png" type="Texture" id=10]
[ext_resource path="res://textures/Characters/Main Character/front_walking5.png" type="Texture" id=11]
[ext_resource path="res://textures/Characters/Main Character/front_walking6.png" type="Texture" id=12]
[ext_resource path="res://textures/Characters/Main Character/front_walking7.png" type="Texture" id=13]
[ext_resource path="res://textures/Characters/Main Character/front_walking8.png" type="Texture" id=14]

[sub_resource type="DynamicFont" id=1]
size = 120
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 5 )

[sub_resource type="AnimatedTexture" id=3]
flags = 4
frames = 8
fps = 8.0
frame_0/texture = ExtResource( 7 )
frame_1/texture = ExtResource( 8 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 9 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 10 )
frame_3/delay_sec = 0.0
frame_4/texture = ExtResource( 11 )
frame_4/delay_sec = 0.0
frame_5/texture = ExtResource( 12 )
frame_5/delay_sec = 0.0
frame_6/texture = ExtResource( 13 )
frame_6/delay_sec = 0.0
frame_7/texture = ExtResource( 14 )
frame_7/delay_sec = 0.0

[node name="MainMenu" type="MarginContainer" groups=[
"gui",
"main",
]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="NinePatchRect" parent="."]
margin_right = 1600.0
margin_bottom = 900.0
texture = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1600.0
margin_bottom = 900.0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
margin_right = 628.0
margin_bottom = 900.0
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30

[node name="TitleMenuContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer"]
margin_left = 30.0
margin_top = 30.0
margin_right = 598.0
margin_bottom = 870.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TitleContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer/TitleMenuContainer"]
editor/display_folded = true
margin_right = 568.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )

[node name="Title" type="RichTextLabel" parent="HBoxContainer/MarginContainer/TitleMenuContainer/TitleContainer"]
margin_right = 568.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 1 )
text = "Skyrim 2
"
scroll_active = false

[node name="MenuContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer/TitleMenuContainer"]
margin_top = 204.0
margin_right = 568.0
margin_bottom = 840.0
rect_min_size = Vector2( 568, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 30

[node name="NewGame" type="MarginContainer" parent="HBoxContainer/MarginContainer/TitleMenuContainer/MenuContainer"]
margin_right = 568.0
margin_bottom = 103.0
size_flags_vertical = 3

[node name="NinePatchRect" type="NinePatchRect" parent="HBoxContainer/MarginContainer/TitleMenuContainer/MenuContainer/NewGame"]
margin_right = 568.0
margin_bottom = 103.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/MarginContainer/TitleMenuContainer/MenuContainer/NewGame"]
margin_right = 568.0
margin_bottom = 103.0
rect_min_size = Vector2( 140, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]New Game[/center]"
text = "New Game"
scroll_active = false

[node name="NewGameButton" type="TextureButton" parent="HBoxContainer/MarginContainer/TitleMenuContainer/MenuContainer/NewGame"]
margin_right = 568.0
margin_bottom = 103.0

[node name="Continue" type="MarginContainer" parent="HBoxContainer/MarginContainer/TitleMenuContainer/MenuContainer"]
margin_top = 133.0
margin_right = 568.0
margin_bottom = 236.0
size_flags_vertical = 3

[node name="NinePatchRect" type="NinePatchRect" parent="HBoxContainer/MarginContainer/TitleMenuContainer/MenuContainer/Continue"]
margin_right = 568.0
margin_bottom = 103.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/MarginContainer/TitleMenuContainer/MenuContainer/Continue"]
margin_right = 568.0
margin_bottom = 103.0
rect_min_size = Vector2( 140, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Continue[/center]"
text = "Continue"
scroll_active = false

[node name="ContinueButton" type="TextureButton" parent="HBoxContainer/MarginContainer/TitleMenuContainer/MenuContainer/Continue"]
margin_right = 568.0
margin_bottom = 103.0

[node name="Controls" type="MarginContainer" parent="HBoxContainer/MarginContainer/TitleMenuContainer/MenuContainer"]
margin_top = 266.0
margin_right = 568.0
margin_bottom = 369.0
size_flags_vertical = 3

[node name="NinePatchRect" type="NinePatchRect" parent="HBoxContainer/MarginContainer/TitleMenuContainer/MenuContainer/Controls"]
margin_right = 568.0
margin_bottom = 103.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/MarginContainer/TitleMenuContainer/MenuContainer/Controls"]
margin_right = 568.0
margin_bottom = 103.0
rect_min_size = Vector2( 140, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Controls[/center]"
text = "Controls"
scroll_active = false

[node name="ControlsButton" type="TextureButton" parent="HBoxContainer/MarginContainer/TitleMenuContainer/MenuContainer/Controls"]
margin_right = 568.0
margin_bottom = 103.0

[node name="Help" type="MarginContainer" parent="HBoxContainer/MarginContainer/TitleMenuContainer/MenuContainer"]
margin_top = 399.0
margin_right = 568.0
margin_bottom = 502.0
size_flags_vertical = 3

[node name="NinePatchRect" type="NinePatchRect" parent="HBoxContainer/MarginContainer/TitleMenuContainer/MenuContainer/Help"]
margin_right = 568.0
margin_bottom = 103.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/MarginContainer/TitleMenuContainer/MenuContainer/Help"]
margin_right = 568.0
margin_bottom = 103.0
rect_min_size = Vector2( 140, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Help[/center]"
text = "Help"
scroll_active = false

[node name="HelpButton" type="TextureButton" parent="HBoxContainer/MarginContainer/TitleMenuContainer/MenuContainer/Help"]
margin_right = 568.0
margin_bottom = 103.0

[node name="Exit" type="MarginContainer" parent="HBoxContainer/MarginContainer/TitleMenuContainer/MenuContainer"]
margin_top = 532.0
margin_right = 568.0
margin_bottom = 636.0
size_flags_vertical = 3

[node name="NinePatchRect" type="NinePatchRect" parent="HBoxContainer/MarginContainer/TitleMenuContainer/MenuContainer/Exit"]
margin_right = 568.0
margin_bottom = 104.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/MarginContainer/TitleMenuContainer/MenuContainer/Exit"]
margin_right = 568.0
margin_bottom = 104.0
rect_min_size = Vector2( 140, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Exit[/center]"
text = "Exit"
scroll_active = false

[node name="ExitButton" type="TextureButton" parent="HBoxContainer/MarginContainer/TitleMenuContainer/MenuContainer/Exit"]
margin_right = 568.0
margin_bottom = 104.0

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]
margin_left = 632.0
margin_right = 1600.0
margin_bottom = 900.0
size_flags_horizontal = 3
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer/MarginContainer2"]
margin_left = 30.0
margin_top = 30.0
margin_right = 938.0
margin_bottom = 870.0
rect_min_size = Vector2( 32, 32 )
rect_pivot_offset = Vector2( 16, 16 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/MarginContainer2"]
margin_left = 30.0
margin_top = 30.0
margin_right = 938.0
margin_bottom = 870.0
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/MarginContainer2/CenterContainer"]
margin_left = 198.0
margin_top = 164.0
margin_right = 710.0
margin_bottom = 676.0
rect_min_size = Vector2( 512, 512 )
rect_pivot_offset = Vector2( 32, 32 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 3 )
stretch_mode = 1
[connection signal="pressed" from="HBoxContainer/MarginContainer/TitleMenuContainer/MenuContainer/NewGame/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/TitleMenuContainer/MenuContainer/Continue/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/TitleMenuContainer/MenuContainer/Controls/ControlsButton" to="." method="_on_ControlsButton_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/TitleMenuContainer/MenuContainer/Help/HelpButton" to="." method="_on_HelpButton_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/TitleMenuContainer/MenuContainer/Exit/ExitButton" to="." method="_on_ExitButton_pressed"]
